--- a/AppleGold/scss/pages/catalog.scss
+++ b/AppleGold/scss/pages/catalog.scss
@@ -107,6 +107,10 @@
         &-product {
             margin-top: 60px;
             width: calc(25% - 10px);
+
+            &__img {
+                height: 266px;
+            }
         }
     }
 }
