--- a/AppleGold/scss/_media.scss
+++ b/AppleGold/scss/_media.scss
@@ -133,6 +133,10 @@
         }
     }
 
+    .sticky-sidebar {
+        position: static;
+    }
+
     //! Main page
     // Start banner
     .start-banner {
@@ -407,6 +411,10 @@
 
             &-product {
                 width: calc(50% - 10px);
+
+                &__img {
+                    height: 185px;
+                }
             }
         }
     }
@@ -542,7 +550,7 @@
             }
 
             &-item {
-                height: 390px;
+                height: 380px;
             }
         }
     }
