--- a/AppleGold/scss/_media.scss
+++ b/AppleGold/scss/_media.scss
@@ -141,7 +141,7 @@
     // Start banner
     .start-banner {
         margin-bottom: -26px;
-        padding: 30px 25px;
+        padding: 30px 12px;
         height: vw(830);
         background-image: url('../img/start_banner_mobile.svg');
 
@@ -160,13 +160,13 @@
 
             @keyframes floating {
                 0% {
-                    transform: translateY(0px) scale(1.3);
+                    transform: translateY(0px) scale(1.1);
                 }
                 50% {
-                    transform: translateY(-15px) scale(1.5);
+                    transform: translateY(-15px) scale(1.3);
                 }
                 100% {
-                    transform: translateY(0px) scale(1.3);
+                    transform: translateY(0px) scale(1.1);
                 }
             }
         }
@@ -500,6 +500,14 @@
 
     //! Product page
     .product-page {
+        &__favorite-btn {
+            margin-left: auto;
+            position: absolute;
+            right: 5px;
+            top: 5px;
+            height: 41px;
+        }
+
         .vertical-slider {
             display: none;
         }
@@ -520,6 +528,10 @@
         .product-content {
             &__overprice {
                 margin-left: 15px;
+            }
+
+            &__btn {
+                width: 100%;
             }
         }
     }
