--- a/AppleGold/scss/sections/header.scss
+++ b/AppleGold/scss/sections/header.scss
@@ -202,13 +202,19 @@
             margin-bottom: 10px;
             display: block;
             color: #7a7a7a;
+            font-size: em(18px);
             text-transform: uppercase;
         }
     }
 
     &-lists {
+        li + li {
+            margin-top: 5px;
+        }
+
         a {
             text-transform: uppercase;
+            font-size: em(18px);
         }
     }
 }
