--- a/AppleGold/scss/main.scss
+++ b/AppleGold/scss/main.scss
@@ -15,6 +15,7 @@
 @import './pages/cart.scss';
 @import './pages/dashboard.scss';
 @import './pages/product.scss';
+@import './pages/others.scss';
 
 
 @import "media"; // Always at the end
