--- a/AppleGold/scss/sections/components.scss
+++ b/AppleGold/scss/sections/components.scss
@@ -1,3 +1,32 @@
+// Simple section
+.simple-section {
+    padding: 40px 0;
+    color: #fff;
+    border-bottom: 1px solid #7a7a7a;
+
+    p {
+        color: #fff;
+        font-size: em(18px);
+    }
+
+    p + p {
+        margin-top: 5px;
+    }
+
+    h3 {
+        font-size: em(23px);
+    }
+
+    h3 + h3 {
+        margin-top: 5px;
+    }
+
+    ol {
+        margin-top: 10px;
+        padding-left: 20px;
+    }
+}
+
 // Form
 .form {
     &__title {
@@ -13,9 +42,9 @@
         font-size: em(14px);
         font-weight: 500;
         background: #2D2D2D;
-        border-radius: 6px;
+        border-radius: 4px;
     }
-    
+
     &__label {
         display: block;
         color: #fff;
@@ -33,7 +62,7 @@
     &-radio + &-radio {
         margin-top: 10px;
     }
-    
+
     &-radio {
         width: 100%;
         @include flexbox(flex-start);
@@ -78,6 +107,34 @@
             display: block;
             color: #7a7a7a;
             font-size: em(10px);
+        }
+    }
+
+    &__select {
+        position: relative;
+        width: 100%;
+
+        &:after {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%) rotate(180deg);
+            content: '\f2ec';
+            color: #fff;
+            font-size: em(10px);
+            font-weight: 900;
+            font-family: "Font Awesome 6 Pro";
+        }
+
+        select {
+            width: 100%;
+            padding: 14px 10px;
+            color: #fff;
+            font-size: em(14px);
+            font-weight: 500;
+            appearance: none;
+            background: #2D2D2D;
+            border-radius: 6px;
         }
     }
 
@@ -468,8 +525,17 @@
 .products-section {
     width: 100%;
 
+    &-row {
+        margin-top: -10px;
+        margin-left: -5px;
+        margin-right: -5px;
+    }
+
     .product {
-        width: calc(16.6% - 5px);
+        margin-top: 10px;
+        margin-left: 5px;
+        margin-right: 5px;
+        width: calc(16.666% - 10px);
     }
 }
 
@@ -640,6 +706,21 @@
 
         &__text {
             font-size: em(11px);
+        }
+
+        &__link {
+            text-transform: uppercase;
+            color: $text;
+            font-size: em(12px);
+            font-weight: 500;
+
+            a {
+                text-decoration: underline;
+                color: inherit;
+                font-size: inherit;
+                font-weight: inherit;
+                cursor: pointer;
+            }
         }
     }
 
