--- a/KuTech/scss/sections/header.scss
+++ b/KuTech/scss/sections/header.scss
@@ -30,6 +30,10 @@
                 color: $gold;
             }
         }
+
+        .current-menu-item a {
+            color: $gold;
+        }
     }
 
     // Language
