--- a/KuTech/scss/_libs.scss
+++ b/KuTech/scss/_libs.scss
@@ -4,6 +4,9 @@
 // Swiper
 @import "../css_libs/swiper/swiper.scss";
 
+// Magnific popup
+@import "../css_libs/magnific-popup/magnific-popup.css";
+
 // AOS
 @import "../css_libs/aos/aos.css";
 
