--- a/KuTech/scss/sections/sections.scss
+++ b/KuTech/scss/sections/sections.scss
@@ -139,9 +139,13 @@
     }
 
     &-slider {
-        margin-top: 30px;
+        margin-top: 100px;
         position: relative;
         overflow: visible;
+
+        &-nav {
+            top: -25px;
+        }
 
         &__wrapper {
             align-items: flex-end;
@@ -152,18 +156,19 @@
 
             &.swiper-slide-active {
                 img {
-                    max-height: 550px;
+                    transform: scale(1.4) translateY(-40px);
                 }
             }
 
             img {
                 max-height: 400px;
+                transition: all .5s ease;
             }
         }
 
         &__text {
             position: absolute;
-            top: -10px;
+            top: -75px;
             left: 0;
             max-width: 340px;
             display: block;
@@ -175,6 +180,8 @@
 
 // Contact section
 .contact-section {
+    overflow: hidden;
+
     &__content {
         font-size: em(18px);
     }
@@ -183,6 +190,8 @@
 //! About page
 // About
 .about-section {
+    overflow: hidden;
+
     &__text {
         max-width: 750px;
         font-size: em(18px);
@@ -508,8 +517,6 @@
 }
 
 .equipment {
-    overflow: hidden;
-
     // Description
     .description {
         &-slider-nav {
@@ -523,6 +530,7 @@
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center;
+                cursor: pointer;
             }
         }
 
@@ -561,6 +569,11 @@
                         }
                     }
                 }
+            }
+
+            &-sticky {
+                position: sticky;
+                top: 60px;
             }
 
             &__img {
@@ -669,18 +682,6 @@
         z-index: 1;
         overflow: hidden;
 
-        &:after {
-            position: absolute;
-            z-index: -1;
-            left: 50%;
-            top: 305px;
-            transform: translateX(-50%);
-            content: '';
-            @include box(1675px, 500px);
-            border-top: 1px solid $accent;
-            border-radius: 50%;
-        }
-
         &__text {
             font-size: em(24px);
             font-weight: 500;
@@ -689,9 +690,22 @@
         // Slider
         &-slider {
             margin-top: 100px;
+            position: relative;
             width: 100%;
             height: 170px;
             overflow: visible;
+
+            &:after {
+                position: absolute;
+                z-index: -1;
+                left: 50%;
+                top: 45px;
+                transform: translateX(-50%);
+                content: '';
+                @include box(1675px, 500px);
+                border-top: 1px solid $accent;
+                border-radius: 50%;
+            }
 
             &-item {
                 height: 92px;
