--- a/Luxury/scss/_media.scss
+++ b/Luxury/scss/_media.scss
@@ -454,6 +454,7 @@
         padding-bottom: 0;
 
         &-item {
+            top: 60px;
             margin-top: 35px;
             display: block;
 
