--- a/ParkPass/css/sections/qr-scan.css
+++ b/ParkPass/css/sections/qr-scan.css
@@ -38,7 +38,6 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    height: 100%;
 }
 
 /* Content */
@@ -75,4 +74,9 @@
     margin-top: 30px;
     align-self: center;
     max-width: 220px;
+}
+
+/* Back btn */
+.qr-back-btn {
+    
 }
