--- a/ParkPass/css/components.css
+++ b/ParkPass/css/components.css
@@ -117,7 +117,7 @@
     border-top-right-radius: 10px;
     box-shadow: 0 -3px 4.7px 0 rgba(0, 0, 0, .25);
     overflow-y: auto;
-    /* transition: transform 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94); */
+    transition: transform 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .modal-inner:after {
