--- a/ParkPass/css/reset.css
+++ b/ParkPass/css/reset.css
@@ -9,12 +9,19 @@
     font-weight: 400;
 }
 
+/* Предотвращаем прыжки */
+html, body {
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     position: relative;
     z-index: 1;
     overflow-x: hidden;
     background-color: #F0F0F0;
 }
+
 
 body:after {
     position: absolute;
