--- a/ParkPass/css/sections/session.css
+++ b/ParkPass/css/sections/session.css
@@ -18,7 +18,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 180px;
+    height: calc(180 / var(--base-width) * 100vw);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -35,7 +35,7 @@
     left: 14px;
     padding: 7px 16px;
     text-align: center;
-    font-size: 14px;
+    font-size: calc(14 / var(--base-width) * 100vw);
     font-weight: 700;
     background: #fff;
     border: 1px solid #E9E9E9;
@@ -44,7 +44,7 @@
 
 .session-box-img-text {
     color: var(--accent);
-    font-size: 12px;
+    font-size: calc(12 / var(--base-width) * 100vw);
 }
 
 .session-box-img-default {
@@ -57,11 +57,11 @@
 /* Common tags */
 .session-box span {
     color: var(--accent);
-    font-size: 12px;
+    font-size: calc(12 / var(--base-width) * 100vw);
 }
 
 .session-box b {
-    font-size: 22px;
+    font-size: calc(22 / var(--base-width) * 100vw);
     font-weight: 500;
 }
 
@@ -74,6 +74,7 @@
     position: relative;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 4px 0;
 }
 
@@ -91,14 +92,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 22px;
-    height: 22px;
+    width: calc(22 / var(--base-width) * 100vw);
+    height: calc(22 / var(--base-width) * 100vw);
     background: var(--gold);
     border-radius: 4px;
 }
 
 .session-box-info .icon img {
-    width: 18px;
+    width: calc(18 / var(--base-width) * 100vw);
 }
 
 .session-box-info .column {
@@ -110,7 +111,7 @@
 
 .session-box-info .column span:last-child {
     color: var(--text);
-    font-size: 14px;
+    font-size: calc(14 / var(--base-width) * 100vw);
 }
 
 /* Checkbox */
@@ -121,6 +122,7 @@
     flex-wrap: wrap;
     padding: 14px;
     width: 100%;
+    font-size: calc(14 / var(--base-width) * 100vw);
     border: 1px solid #E9E9E9;
     border-radius: 30px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, .25);
@@ -133,8 +135,8 @@
 
 .session-box-checkbox-field {
     position: relative;
-    width: 38px;
-    height: 20px;
+    width: calc(38 / var(--base-width) * 100vw);
+    height: calc(20 / var(--base-width) * 100vw);
 }
 
 .session-box-checkbox-field-wrapper {
@@ -194,7 +196,7 @@
     display: block;
     width: 100%;
     color: #FA4E4E !important;
-    font-size: 10px !important;
+    font-size: calc(10 / var(--base-width) * 100vw) !important;
 }
 
 /* Btn */
@@ -235,7 +237,7 @@
     width: 100%;
     text-align: center;
     color: var(--text);
-    font-size: 14px;
+    font-size: calc(14 / var(--base-width) * 100vw);
 }
 
 .session-timer-inner {
@@ -252,7 +254,7 @@
     left: 50%;
     transform: translateX(-50%);
     color: #5EE381;
-    font-size: 60px;
+    font-size: calc(60 / var(--base-width) * 100vw);
 }
 
 .session-timer-decimal {
@@ -268,7 +270,7 @@
     width: calc(50% - 5px);
     padding: 13px 10px;
     color: #5EE381;
-    font-size: 70px;
+    font-size: calc(70 / var(--base-width) * 100vw);
     font-weight: 500;
     border: 1px solid #F2F2F2;
     border-radius: 10px;
@@ -281,7 +283,7 @@
     display: block;
     width: 100%;
     text-align: center;
-    font-size: 14px;
+    font-size: calc(14 / var(--base-width) * 100vw);
 }
 
 /** Bottom */
